[resource] ic_launcher change

--- a/Space_Out/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/Space_Out/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,33 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="129"
+    android:viewportHeight="102">
+  <group android:scaleX="0.45"
+      android:scaleY="0.35581395"
+      android:translateX="35.475"
+      android:translateY="32.85349">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
+        android:pathData="M29,57C30.66,57 32,55.66 32,54C32,52.34 30.66,51 29,51C27.34,51 26,52.34 26,54C26,55.66 27.34,57 29,57Z"
+        android:strokeAlpha="0.8"
+        android:fillColor="#ffffff"
+        android:fillAlpha="0.8"/>
+    <path
+        android:pathData="M91,72C92.66,72 94,70.66 94,69C94,67.34 92.66,66 91,66C89.34,66 88,67.34 88,69C88,70.66 89.34,72 91,72Z"
+        android:strokeAlpha="0.8"
+        android:fillColor="#ffffff"
+        android:fillAlpha="0.8"/>
+    <path
+        android:pathData="M67,17C68.66,17 70,15.66 70,14C70,12.34 68.66,11 67,11C65.34,11 64,12.34 64,14C64,15.66 65.34,17 67,17Z"
+        android:strokeAlpha="0.8"
+        android:fillColor="#ffffff"
+        android:fillAlpha="0.8"/>
+    <path
         android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M19.84,23.1L20.3,24.3L20.77,23.1C26.61,8.08 43.21,0.5 58.43,0.5C66.03,0.5 73.23,2.39 78.51,6.14C83.77,9.87 87.15,15.45 87.15,22.92V23.63L87.82,23.39C103.49,17.72 117.1,22.46 123.88,32.27C130.67,42.08 130.73,57.11 118.95,72.26L118.78,72.48L118.88,72.75C121.79,80.25 120.81,86.51 117.39,91.25C113.96,96.01 108.02,99.31 100.92,100.72C86.73,103.55 68.11,98.83 56.35,83.72L56.06,83.35L55.67,83.61C42.02,93.01 24.44,90.21 13.19,81.25C7.57,76.77 3.56,70.79 2.41,64.07C1.26,57.36 2.94,49.86 8.81,42.32L9.09,41.96L8.76,41.65C-0.99,32.25 -0.92,20.1 2.9,14.11C4.8,11.13 7.55,9.76 10.48,10.8C13.49,11.85 16.88,15.5 19.84,23.1Z"
+        android:strokeAlpha="0.6"
+        android:fillColor="#8BA4D4"
+        android:strokeColor="#27303E"
+        android:fillAlpha="0.6"/>
+  </group>
 </vector>
